SEBSERV-794 added inUse attribute for certificate